Fix KemonoDownloader and now use the API